@@ -1,12 +1,15 @@
 """ Daviz content schema
 """
 
+import json
+
 from Products.ATContentTypes.content.folder import ATFolder
 from Products.Archetypes.atapi import Schema
 from Products.Archetypes.public import StringField, ReferenceField
 from Products.Archetypes.public import TextAreaWidget, StringWidget, LabelWidget
 from archetypes.referencebrowserwidget.widget import ReferenceBrowserWidget
 from eea.app.visualization.interfaces import IDataProvenance
+from eea.app.visualization.interfaces import IMultiDataProvenance
 from eea.daviz.config import EEAMessageFactory as _
 from eea.daviz.events import DavizExternalChanged
 from eea.daviz.events import DavizRelationsChanged
@@ -19,7 +22,6 @@ import logging
 from Products.DataGridField import DataGridField, DataGridWidget
 from Products.DataGridField.Column import Column
 from Products.DataGridField.SelectColumn import SelectColumn
-
 
 logger = logging.getLogger('eea.daviz')
 #
@@ -73,7 +75,6 @@ class DavizStringField(StringField):
         super(DavizStringField, self).set(instance, value, **kwargs)
         if old != value:
             notify(DavizSpreadSheetChanged(instance, spreadsheet=value))
-
 class DavizUrlField(StringField):
     """ Notify on set
     """
@@ -103,6 +104,14 @@ class DavizDataField(StringField):
         config = queryAdapter(instance, IDataProvenance)
         setattr(config, self.alias, value)
 
+class DavizDataGridField(DataGridField):
+    def get(self, instance, **kwargs):
+        config = queryAdapter(instance, IMultiDataProvenance)
+        return getattr(config, 'provenances', ({},))
+
+    def set(self, instance, value, **kwargs):
+        config = queryAdapter(instance, IMultiDataProvenance)
+        setattr(config, 'provenances', value)
 
 SCHEMA = Schema((
     DavizReferenceField('relatedItems',
@@ -182,8 +191,6 @@ SCHEMA = Schema((
                     "Are you sure you want to continue?"
             ),
             i18n_domain="eea",
-#            helper_js=('++resource++eea.daviz.warnings.js',),
-#            helper_css=('++resource++eea.daviz.edit.css',),
             visible={'edit': 'visible', 'view': 'invisible'}
         )
     ),
@@ -193,6 +200,7 @@ SCHEMA = Schema((
             label=_("Data source title"),
             description=_("Specify data source"),
             i18n_domain="eea",
+            visible={'edit': 'invisible', 'view': 'invisible'}
         ),
     ),
     DavizDataField('dataLink', alias="link",
@@ -201,8 +209,7 @@ SCHEMA = Schema((
             label=_("Data source link"),
             description=_("Specify data source link"),
             i18n_domain="eea",
-            helper_js=('++resource++eea.daviz.datasource.js',),
-            helper_css=('++resource++eea.daviz.datasource.css',)
+            visible={'edit': 'invisible', 'view': 'invisible'}
         )
     ),
     DavizDataField('dataOwner', alias="owner",
@@ -212,12 +219,13 @@ SCHEMA = Schema((
             label=_("Data source Organisation"),
             description=_("Specify data source Organisation"),
             i18n_domain="eea",
+            visible={'edit': 'invisible', 'view': 'invisible'}
         )
     ),
 
-    DataGridField(
-        name='provenance',
-        searchable=True,
+    DavizDataGridField(
+        name='provenances',
+        searchable=False,
         widget=DataGridWidget(
             label="Data Provenance",
             description="""List of Data Provenance""",
@@ -265,10 +273,6 @@ def finalizeSchema(schema=DAVIZ_SCHEMA):
     schema.moveField('relatedItems', after="external")
 
     # Reorder data source fields
-    schema.moveField('dataTitle', after='description')
-    schema.moveField('dataLink', after='dataTitle')
-    schema.moveField('dataOwner', after='dataLink')
-
-    schema.moveField('provenance', after='dataOwner')
+    schema.moveField('provenances', after='description')
 
 finalizeSchema(DAVIZ_SCHEMA)
